--- a/package.json
+++ b/package.json
@@ -11,9 +11,17 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.3.2",
+    "history": "^5.3.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.0",
+    "redux-first-history": "^5.2.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@csstools/postcss-global-data": "^2.1.1",
@@ -41,6 +49,8 @@
     "stylelint-order": "^6.0.4",
     "typescript": "^5.2.2",
     "typescript-plugin-css-modules": "^5.0.2",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-checker": "^0.6.2",
+    "vite-tsconfig-paths": "^4.2.2"
   }
 }
