--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@core/*": ["src/core/*"]
+    },
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "target": "ES2020",
     "useDefineForClassFields": true,
