--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@csstools/postcss-global-data": "^2.1.1",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/classnames": "^2.3.1",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
