--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "history": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
@@ -41,6 +42,8 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^8.0.0",
     "lint-staged": "^15.2.0",
+    "meow": "^9.0.0",
+    "optionator": "^0.9.3",
     "postcss": "^8.4.32",
     "postcss-cli": "^11.0.0",
     "postcss-custom-media": "^10.0.2",
