--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.0.16",
     "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.3.2",
     "history": "^5.3.0",
