--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource-variable/inter": "^5.0.16",
     "@reduxjs/toolkit": "^2.0.1",
     "classnames": "^2.3.2",
+    "date-fns": "^3.0.6",
     "history": "^5.3.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
