--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "modern-normalize": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-inlinesvg": "^4.1.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.0",
     "redux-first-history": "^5.2.0",
